# BigDataIA-SPring26-Team-4-case-study-5

./: .dockerignore  .env.example  .gitignore  README.md  cs4_api.py  pyproject.toml  requirements.txt  streamlit_app.py  test_agents.py  test_assessment_history.py  test_cs2_wrapper.py  test_cs4_client.py  test_failure_propagation.py  test_fund_air.py  test_mcp_server.py  test_mcp_tools.py  test_metrics.py  test_portfolio_data_service.py
airflow/dags/: evidence_collection_dag.py  evidence_indexing_dag.py  scoring_pipeline_dag.py
app/: config.py  logging.py  main.py
app/database/: schema.sql
app/models/: __init__.py  assessment.py  common.py  company.py  dimension.py  document.py  evidence.py  signal.py
app/pipelines/: __init__.py  board_analyzer.py  document_parser.py  glassdoor_collector.py  job_signals.py  news_collector.py  patent_signals.py  sec_edgar.py  tech_signals.py
app/routers/: __init__.py  assessments.py  companies.py  config.py  documents.py  health.py  industries.py  justification.py  pipeline.py  rubrics.py  scores.py  search.py  signals.py
app/scoring/: __init__.py  confidence.py  evidence_mapper.py  hr_calculator.py  integration_service.py  org_air_calculator.py  position_factor.py  rubric_scorer.py  synergy_calculator.py  talent_concentration.py  utils.py  vr_calculator.py
cs5/: .dockerignore  Dockerfile  README.md  TESTING_GUIDE.md  TESTING_PLAN_FINAL.md  deploy-ec2.sh  main.py  pyproject.toml
cs5/src/: .env.example  config.py
cs5/src/agents/: __init__.py  specialists.py  state.py  supervisor.py
cs5/src/dashboard/: __init__.py  app.py
cs5/src/dashboard/components/: evidence_display.py
cs5/src/exercises/: __init__.py  agentic_due_diligence.py
cs5/src/extensions/: __init__.py  ic_memo_generator.py  investment_tracker.py  lp_letter_generator.py  mem0_memory.py
cs5/src/mcp_server/: server.py
cs5/src/services/: cs1_client.py  cs2_client.py  cs3_client.py  cs4_client.py
cs5/src/services/analytics/: fund_air.py
cs5/src/services/integration/: portfolio_data_service.py
cs5/src/services/observability/: metrics.py
cs5/src/services/tracking/: assessment_history.py
cs5/src/services/value_creation/: __init__.py  ebitda.py  gap_analysis.py
cs5/tests/: __init__.py  conftest.py  test_mcp_integration.py
docker/: Dockerfile  Dockerfile.cs4  Dockerfile.streamlit  README.Docker.md  compose.yaml
docs/: codelabs_cs3.md  evidence_report.md
exercises/: complete_pipeline.py
results/: dg.json  dg_jobs.json  dg_sec_scores.json  ge.json  ge_jobs.json  ge_sec_scores.json  jpm.json  jpm_jobs.json  jpm_sec_scores.json  nvda.json  nvda_jobs.json  nvda_sec_scores.json  wmt.json  wmt_jobs.json  wmt_sec_scores.json
scripts/: backfill_companies.py  backfill_leadership.py  collect_cs3_evidence.py  collect_evidence.py  collect_news.py  drop_database.py  improve_signals.py  init_db.py  push_glassdoor_to_snowflake.py  rechunk_filings.py  rescrape_glassdoor.py  score_portfolio.py  score_sec_text_v2.py  scrape_jobs_v2.py  test_connection.py
src/: __init__.py  config.py
tests/: conftest.py  test_api.py  test_collectors.py  test_cs4_api.py  test_cs4_integration.py  test_cs4_rag.py  test_cs4_workflows.py  test_models.py  test_scoring_engine.py  test_scoring_utils.py  test_sec_edgar.py  test_signals.py
(+157 files in other folders)
